--- a/src/index.css
+++ b/src/index.css
@@ -34,17 +34,6 @@ color: #FFFFFF;
  border-radius: 10px;
  padding: .5rem;
 }
-#location{
-  display: flex;
-  justify-content: flex-start;
-  color:white;
-  width: 15.36px;
-height: 18.27px;
-  border: none;
-  width: inherit;
-  background: transparent;
-
-}
 
 input{
   color:white;
@@ -141,4 +130,29 @@ cursor: pointer;
 
 color: #FFFFFF;
 
+}
+.menu{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width:100%;
+  height: 79px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: #403C3B;
+box-shadow: 0px 30px 60px rgba(34, 31, 32, 0.2);
+}
+.set{
+  font-family: 'Gilroy';
+font-style: normal;
+font-weight: 400;
+font-size: 17px;
+line-height: 21px;
+top: calc(50% - 21px/2 - 877.5px);
+
+
+color: #CFCFCF;
+
+}
+a{
+  text-decoration: none;
 }
